--- a/Revit_Schedule.ipynb
+++ b/Revit_Schedule.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,6 @@
     "        path_building = self.path_building\n",
     "        config = configparser.ConfigParser()\n",
     "        config.read('configurations.ini')\n",
-    "        config.sections()\n",
     "        if (proj == 'TLC'):\n",
     "            path_proj = config['path']['tlc']\n",
     "        if (proj == 'ORC'): \n",
@@ -133,6 +132,12 @@
     "    def files(self):\n",
     "        proj = self.proj\n",
     "        path_building = self.path_building\n",
+    "        config = configparser.ConfigParser()\n",
+    "        config.read('configurations.ini')\n",
+    "        if (proj == 'TLC'):\n",
+    "            path_proj = config['path']['tlc']\n",
+    "        if (proj == 'ORC'): \n",
+    "            path_proj = config['path']['orc'] \n",
     "        list_folder = os.listdir(path_proj + r'/'+ path_building)    \n",
     "        f = filter(lambda x: 'xlsx' in x, list_folder)\n",
     "        list_folder = list(f)\n",
@@ -143,7 +148,6 @@
     "        path_building = self.path_building\n",
     "        config = configparser.ConfigParser()\n",
     "        config.read('configurations.ini')\n",
-    "        config.sections()\n",
     "        if (proj == 'TLC'):\n",
     "            path_proj = config['path']['tlc']\n",
     "        if (proj == 'ORC'): \n",
@@ -153,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -161,112 +165,7 @@
      "output_type": "stream",
      "text": [
       "Путь к папке: \\\\192.168.128.12\\VTBN_Disk\\% ДПС\\02 - ОРЦ\\05 - ПИР\\03 - ПРОЕКТ\\04 - ТД\\08 - BIM/8_Адм.блок_1 этап\n",
-      "Список файлов: ['ORC_T_I_8_STH_BIM_KR_Конструкции(ВГЗП)_Schedules.xlsx']\n",
-      "Собранная спецификация:    Building Discipline Category  \\\n",
-      "0         8         KR   Floors   \n",
-      "1         8         KR   Floors   \n",
-      "2         8         KR   Floors   \n",
-      "3         8         KR   Floors   \n",
-      "4         8         KR   Floors   \n",
-      "..      ...        ...      ...   \n",
-      "0         8         KR    Walls   \n",
-      "1         8         KR    Walls   \n",
-      "2         8         KR    Walls   \n",
-      "3         8         KR    Walls   \n",
-      "4         8         KR    Walls   \n",
-      "\n",
-      "                                                 File  \\\n",
-      "0   ORC_T_I_8_STH_BIM_KR_Конструкции(ВГЗП)_Schedul...   \n",
-      "1   ORC_T_I_8_STH_BIM_KR_Конструкции(ВГЗП)_Schedul...   \n",
-      "2   ORC_T_I_8_STH_BIM_KR_Конструкции(ВГЗП)_Schedul...   \n",
-      "3   ORC_T_I_8_STH_BIM_KR_Конструкции(ВГЗП)_Schedul...   \n",
-      "4   ORC_T_I_8_STH_BIM_KR_Конструкции(ВГЗП)_Schedul...   \n",
-      "..                                                ...   \n",
-      "0   ORC_T_I_8_STH_BIM_KR_Конструкции(ВГЗП)_Schedul...   \n",
-      "1   ORC_T_I_8_STH_BIM_KR_Конструкции(ВГЗП)_Schedul...   \n",
-      "2   ORC_T_I_8_STH_BIM_KR_Конструкции(ВГЗП)_Schedul...   \n",
-      "3   ORC_T_I_8_STH_BIM_KR_Конструкции(ВГЗП)_Schedul...   \n",
-      "4   ORC_T_I_8_STH_BIM_KR_Конструкции(ВГЗП)_Schedul...   \n",
-      "\n",
-      "                             Family and Type  \\\n",
-      "0   Floor: СП_Бетонная подготовка В7.5 100мм   \n",
-      "1                   Floor: СП_Плита_В25 50мм   \n",
-      "2                   Floor: СП_Плита_В25 50мм   \n",
-      "3                  Floor: СП_Плита_В25 150мм   \n",
-      "4                  Floor: СП_Плита_В25 200мм   \n",
-      "..                                       ...   \n",
-      "0             Basic Wall: СП_Бетон_В25 200мм   \n",
-      "1     Basic Wall: СП_Бетон_В25 200мм_приямка   \n",
-      "2     Basic Wall: СП_Бетон_В25 200мм_приямка   \n",
-      "3     Basic Wall: СП_Бетон_В25 200мм_приямка   \n",
-      "4              Basic Wall: СП_утеплитель 100   \n",
-      "\n",
-      "                      О_Наименование  О_Завод-изготовитель  \\\n",
-      "0       Бетонная подготовка t=100 мм                   NaN   \n",
-      "1                 Перекрытие t=200мм                   NaN   \n",
-      "2                 Перекрытие t=200мм                   NaN   \n",
-      "3                 Плита пола t=150мм                   NaN   \n",
-      "4                 Перекрытие t=200мм                   NaN   \n",
-      "..                               ...                   ...   \n",
-      "0                   Стена монолитная                   NaN   \n",
-      "1   Стена приямка монолитная t=200мм                   NaN   \n",
-      "2   Стена приямка монолитная t=200мм                   NaN   \n",
-      "3   Стена приямка монолитная t=200мм                   NaN   \n",
-      "4             Утеплитель цоколя ЭППС                   NaN   \n",
-      "\n",
-      "   О_Единица измерения 5D_ВТБн_Код классификатора  \\\n",
-      "0                   м³          02.01.08.02.02.01   \n",
-      "1                   м³       02.01.08.02.03.01.03   \n",
-      "2                   м³       02.01.08.02.03.01.03   \n",
-      "3                   м³          02.01.08.02.02.06   \n",
-      "4                   м³       02.01.08.02.03.01.03   \n",
-      "..                 ...                        ...   \n",
-      "0                   м³       02.01.08.02.03.01.05   \n",
-      "1                   м³          02.01.08.02.02.08   \n",
-      "2                   м³          02.01.08.02.02.08   \n",
-      "3                   м³          02.01.08.02.02.08   \n",
-      "4                   м³       02.01.08.02.03.01.02   \n",
-      "\n",
-      "   5D_ВТБн_Описание кода классификатора  ...  Count О_Код изделия  Type Mark  \\\n",
-      "0                   Бетонная подготовка  ...     60           NaN        NaN   \n",
-      "1                            Перекрытия  ...      1           NaN        NaN   \n",
-      "2                            Перекрытия  ...      1           NaN        NaN   \n",
-      "3    Монолитная плита (плита по грунту)  ...      3           NaN        NaN   \n",
-      "4                            Перекрытия  ...      1           NaN        NaN   \n",
-      "..                                  ...  ...    ...           ...        ...   \n",
-      "0                                 Стены  ...     30           NaN        2.0   \n",
-      "1                               Приямки  ...      4           NaN        NaN   \n",
-      "2                               Приямки  ...      4           NaN        NaN   \n",
-      "3                               Приямки  ...      4           NaN        NaN   \n",
-      "4                                Цоколь  ...      4           NaN        NaN   \n",
-      "\n",
-      "   Type Comments  Assembly Code  Assembly Description  Material: Name  \\\n",
-      "0            NaN            NaN                   NaN             NaN   \n",
-      "1            NaN            NaN                   NaN             NaN   \n",
-      "2            NaN            NaN                   NaN             NaN   \n",
-      "3            NaN            NaN                   NaN             NaN   \n",
-      "4            NaN            NaN                   NaN             NaN   \n",
-      "..           ...            ...                   ...             ...   \n",
-      "0             См            NaN                   NaN             NaN   \n",
-      "1             См            NaN                   NaN             NaN   \n",
-      "2             См            NaN                   NaN             NaN   \n",
-      "3             См            NaN                   NaN             NaN   \n",
-      "4             См            NaN                   NaN             NaN   \n",
-      "\n",
-      "    Material: Volume О_Масса  Structural Usage  \n",
-      "0                NaN     NaN               NaN  \n",
-      "1                NaN     NaN               NaN  \n",
-      "2                NaN     NaN               NaN  \n",
-      "3                NaN     NaN               NaN  \n",
-      "4                NaN     NaN               NaN  \n",
-      "..               ...     ...               ...  \n",
-      "0                NaN     NaN               NaN  \n",
-      "1                NaN     NaN               NaN  \n",
-      "2                NaN     NaN               NaN  \n",
-      "3                NaN     NaN               NaN  \n",
-      "4                NaN     NaN               NaN  \n",
-      "\n",
-      "[66 rows x 28 columns]\n"
+      "Список файлов: ['ORC_T_I_8_STH_BIM_KR_Конструкции(ВГЗП)_Schedules.xlsx']\n"
      ]
     }
    ],
@@ -275,12 +174,12 @@
     "bilding_orc_8 = rschedule('ORC', '8_Адм.блок_1 этап')\n",
     "print('Путь к папке:', bilding_orc_8.path())\n",
     "print('Список файлов:', bilding_orc_8.files())\n",
-    "print('Собранная спецификация:', bilding_orc_8.df())\n"
+    "#print('Собранная спецификация:', bilding_orc_8.df())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,25 +287,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Проверка Family and Type\n",
+    "list_true = list(listdf)\n",
     "for i in range(len(listdf)):\n",
-    "    print(i)\n",
+    "#    print(i)\n",
     "    for j in range(len(listdf[i])):\n",
-    "        list_try[i].append\n",
-    "#        print('Family and Type' in listdf[i][j],'---', j)\n",
-    "#any([x == 'Department' for x in listdf[0]])"
+    "        list_true[i].append\n",
+    "#        print('Family and Type' in listdf[i][j],'---', j)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
